# sdl-bgi

./: 00_README  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Changelog  Functions.txt  INSTALL  INSTALL.md  LICENSE  README  README.md  TODO  Using.txt  build.sh  sdl_bgi.spec
doc/: .#sdl_bgi-quickref.tex  functions.md  functions.txt  howto_CodeBlocks.md  howto_Dev-Cpp.md  sdl_bgi-quickref.tex  turtlegraphics.tex  using.md  using.txt
src/: Makefile  Makefile.CodeBlocks  Makefile.DevCpp  SDL_bgi.c  SDL_bgi.h  SDL_bgi_fonts.h  graphics.h
src/test/: Makefile  README  bgidemo.c  cellular.c  dla.c  f90_test.f90  fern.c  floodfilltest.c  hopalong.c  life.c  mandelbrot.c  mousetest.c  moveit.c  pixels.c  plasma.c  sdl_bgi.mod  sdlbgidemo.c  simple-fast.c  simple.c  test.c  turtle.c  turtle.h  turtledemo.c
test/: Makefile  README  README.md  cellular.c  conio.h  dla.c  dos.h  f90_test.f90  fern.c  floodfilltest.c  hands.c  hopalong.c  kaleido.c  life.c  mandelbrot.c  mousetest.c  moveit.c  multiwin.c  plasma.c  psychedelia.c  sdlbgidemo.c  simple.c  turtle.c  turtle.h  turtledemo.c
